--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API Design With Node.js v4 from frontendmasters",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,11 @@
   "homepage": "https://github.com/PaulACoroneos/API-Design-With-Node.js-v4#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.9",
+    "prisma": "^5.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
