--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Design With Node.js v4 from frontendmasters",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node course/src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/PaulACoroneos/API-Design-With-Node.js-v4#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^5.2.0",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
