--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/PaulACoroneos/API-Design-With-Node.js-v4#readme",
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
