--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "API Design With Node.js v4 from frontendmasters",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "dev": "ts-node course/src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
